--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
 	},
 	"peerDependencies": {
 		"typescript": "^5"
+	},
+	"dependencies": {
+		"neverthrow": "^8.2.0",
+		"valibot": "^1.1.0"
 	}
 }
