--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.4",
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"pino-pretty": "^13.1.1"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
 	},
 	"dependencies": {
 		"neverthrow": "^8.2.0",
+		"pino": "^9.8.0",
 		"valibot": "^1.1.0"
 	}
 }
