--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"croner": "^9.1.0",
+		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0",
 		"neverthrow": "^8.2.0",
 		"pino": "^9.8.0",
 		"valibot": "^1.1.0"
