--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"@clack/prompts": "^0.11.0",
 		"croner": "^9.1.0",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
